<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.hyd.begum.nazeema.com.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mytitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/spotify"
        android:background="@color/buttonBack"
        android:id="@+id/button"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/scores"
        android:background="@color/buttonBack"
        android:id="@+id/button2"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/library"
        android:background="@color/buttonBack"
        android:id="@+id/button3"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/build"
        android:background="@color/buttonBack"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/xyz"
        android:background="@color/buttonBack"
        android:id="@+id/button5"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/capstone"
        android:background="@color/buttonRed"
        android:id="@+id/button6"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

</RelativeLayout>
